@@ -51,6 +51,7 @@
 #include "export_framerate.h"
 #include "ass_export_filter.h"
 #include "ass_time.h"
+#include "ass_dialogue.h"
 #include "subs_grid.h"
 
 
@@ -80,6 +81,7 @@ bool AegisubApp::OnInit() {
 		Options.SetFile(folderName + _T("/config.dat"));
 		Options.Load();
 		AssTime::UseMSPrecision = Options.AsBool(_T("Use nonstandard Milisecond Times"));
+		AssDialogue::keepData = Options.AsBool(_T("Keep raw dialogue data"));
 
 		// Set hotkeys file
 		Hotkeys.SetFile(folderName + _T("/hotkeys.dat"));
